--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,10 @@
 #    uv pip compile pyproject.toml -o requirements.txt
 alabaster==0.7.16
     # via sphinx
-anyio==4.9.0
-    # via
-    #   starlette
-    #   watchfiles
 awscli==1.38.31
     # via dependabot-pip (pyproject.toml)
 babel==2.17.0
     # via sphinx
-beautifulsoup4==4.13.4
-    # via furo
 botocore==1.37.31
     # via
     #   awscli
@@ -20,25 +14,15 @@ certifi==2025.1.31
     # via requests
 charset-normalizer==3.4.1
     # via requests
-click==8.1.8
-    # via uvicorn
 colorama==0.4.6
-    # via
-    #   awscli
-    #   sphinx-autobuild
+    # via awscli
 docutils==0.16
     # via
     #   awscli
     #   myst-parser
     #   sphinx
-furo==2023.3.27
-    # via dependabot-pip (pyproject.toml)
-h11==0.14.0
-    # via uvicorn
 idna==3.10
-    # via
-    #   anyio
-    #   requests
+    # via requests
 imagesize==1.4.1
     # via sphinx
 jinja2==3.1.6
@@ -64,9 +48,7 @@ packaging==25.0
 pyasn1==0.6.1
     # via rsa
 pygments==2.19.1
-    # via
-    #   furo
-    #   sphinx
+    # via sphinx
 python-dateutil==2.9.0.post0
     # via botocore
 pyyaml==6.0.2
@@ -81,23 +63,12 @@ s3transfer==0.11.5
     # via awscli
 six==1.17.0
     # via python-dateutil
-sniffio==1.3.1
-    # via anyio
 snowballstemmer==2.2.0
     # via sphinx
-soupsieve==2.7
-    # via beautifulsoup4
 sphinx==5.3.0
     # via
     #   dependabot-pip (pyproject.toml)
-    #   furo
     #   myst-parser
-    #   sphinx-autobuild
-    #   sphinx-basic-ng
-sphinx-autobuild==2024.10.3
-    # via dependabot-pip (pyproject.toml)
-sphinx-basic-ng==1.0.0b2
-    # via furo
 sphinxcontrib-applehelp==2.0.0
     # via sphinx
 sphinxcontrib-devhelp==2.0.0
@@ -110,17 +81,7 @@ sphinxcontrib-qthelp==2.0.0
     # via sphinx
 sphinxcontrib-serializinghtml==2.0.0
     # via sphinx
-starlette==0.46.2
-    # via sphinx-autobuild
-typing-extensions==4.13.2
-    # via beautifulsoup4
 urllib3==2.4.0
     # via
     #   botocore
     #   requests
-uvicorn==0.34.2
-    # via sphinx-autobuild
-watchfiles==1.0.5
-    # via sphinx-autobuild
-websockets==15.0.1
-    # via sphinx-autobuild
